hack to make badges wrap correctly.

--- a/static/less/main.less
+++ b/static/less/main.less
@@ -282,6 +282,10 @@ div.page.person {
                 }
                 &.sources {
                   text-align: right;
+                  white-space: nowrap;
+                  &.has-oodles-true {
+                    white-space: normal;
+                  }
                   .source-icon {
                     img {
                       width: 16px;
